Prepare v0.5.0 release candidate
